tests/golden/errors/float_truthiness.py
f = 1.5
while f:
    print("unreachable")
